{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 18,
  "lineage": "c93bca39-45df-5cf6-e7b3-e9ecdb3e8a03",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-openshift-console",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-17T02:27:33.045-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-openshift-console",
            "log_config": [],
            "name": "ovirt-network-firewall-openshift-console",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "priority": 1000,
            "project": "double-skyline-310919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-openshift-console",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ovirt-network-firewall-openshift-console"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-secure-forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "24284"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-17T02:27:32.887-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-secure-forward",
            "log_config": [],
            "name": "ovirt-network-firewall-secure-forward",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "priority": 1000,
            "project": "double-skyline-310919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-secure-forward",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ovirt-network-firewall-secure-forward"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8081",
                  "9090",
                  "9000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-17T02:27:33.025-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-http",
            "log_config": [],
            "name": "ovirt-network-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "priority": 1000,
            "project": "double-skyline-310919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ovirt-network-firewall-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-17T02:27:32.654-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-https",
            "log_config": [],
            "name": "ovirt-network-firewall-https",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "priority": 1000,
            "project": "double-skyline-310919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ovirt-network-firewall-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-04-17T02:27:33.164-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-icmp",
            "log_config": [],
            "name": "ovirt-network-firewall-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "priority": 1000,
            "project": "double-skyline-310919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ovirt-network-firewall-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-17T02:27:32.777-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-postgresql",
            "log_config": [],
            "name": "ovirt-network-firewall-postgresql",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "priority": 1000,
            "project": "double-skyline-310919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-postgresql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ovirt-network-firewall-postgresql"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-17T02:27:32.832-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-ssh",
            "log_config": [],
            "name": "ovirt-network-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "priority": 1000,
            "project": "double-skyline-310919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/firewalls/ovirt-network-firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ovirt-network-firewall-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "artifactory-engine-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/disks/artifactory-engine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "arbade.artifactory.org",
            "id": "projects/double-skyline-310919/zones/us-west1-a/instances/artifactory-engine",
            "instance_id": "3366188068915057779",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "rs9vPI5MSuk=",
            "name": "artifactory-engine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.233.238.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
                "network_ip": "10.0.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/regions/us-west1/subnetworks/ovirt-network-subnetwork-us-west1",
                "subnetwork_project": "double-skyline-310919"
              }
            ],
            "project": "double-skyline-310919",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/instances/artifactory-engine",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ovirt-network-firewall-http",
              "ovirt-network-firewall-https",
              "ovirt-network-firewall-icmp",
              "ovirt-network-firewall-openshift-console",
              "ovirt-network-firewall-postgresql",
              "ovirt-network-firewall-secure-forward",
              "ovirt-network-firewall-ssh"
            ],
            "tags_fingerprint": "EaZmpkYQa40=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.ovirt_network",
            "google_compute_subnetwork.ovirt_network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/disks/jenkins-engine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "arbade.jenkins.org",
            "id": "projects/double-skyline-310919/zones/us-west1-a/instances/jenkins-engine",
            "instance_id": "6233933407422190707",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "rs9vPI5MSuk=",
            "name": "jenkins-engine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.81.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
                "network_ip": "10.0.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/regions/us-west1/subnetworks/ovirt-network-subnetwork-us-west1",
                "subnetwork_project": "double-skyline-310919"
              }
            ],
            "project": "double-skyline-310919",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/instances/jenkins-engine",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ovirt-network-firewall-http",
              "ovirt-network-firewall-https",
              "ovirt-network-firewall-icmp",
              "ovirt-network-firewall-openshift-console",
              "ovirt-network-firewall-postgresql",
              "ovirt-network-firewall-secure-forward",
              "ovirt-network-firewall-ssh"
            ],
            "tags_fingerprint": "EaZmpkYQa40=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.ovirt_network",
            "google_compute_subnetwork.ovirt_network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node-engine-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/disks/node-engine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "arbade.node.org",
            "id": "projects/double-skyline-310919/zones/us-west1-a/instances/node-engine",
            "instance_id": "2725155365239329907",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "rs9vPI5MSuk=",
            "name": "node-engine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.230.112.215",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
                "network_ip": "10.0.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/regions/us-west1/subnetworks/ovirt-network-subnetwork-us-west1",
                "subnetwork_project": "double-skyline-310919"
              }
            ],
            "project": "double-skyline-310919",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/instances/node-engine",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ovirt-network-firewall-http",
              "ovirt-network-firewall-https",
              "ovirt-network-firewall-icmp",
              "ovirt-network-firewall-openshift-console",
              "ovirt-network-firewall-postgresql",
              "ovirt-network-firewall-secure-forward",
              "ovirt-network-firewall-ssh"
            ],
            "tags_fingerprint": "EaZmpkYQa40=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.ovirt_network",
            "google_compute_subnetwork.ovirt_network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sonar-store-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/disks/sonar-store"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "arbade.sonar.org",
            "id": "projects/double-skyline-310919/zones/us-west1-a/instances/sonar-store",
            "instance_id": "6181106993308570739",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "rs9vPI5MSuk=",
            "name": "sonar-store",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.82.125.201",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
                "network_ip": "10.0.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/regions/us-west1/subnetworks/ovirt-network-subnetwork-us-west1",
                "subnetwork_project": "double-skyline-310919"
              }
            ],
            "project": "double-skyline-310919",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/zones/us-west1-a/instances/sonar-store",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ovirt-network-firewall-http",
              "ovirt-network-firewall-https",
              "ovirt-network-firewall-icmp",
              "ovirt-network-firewall-openshift-console",
              "ovirt-network-firewall-postgresql",
              "ovirt-network-firewall-secure-forward",
              "ovirt-network-firewall-ssh"
            ],
            "tags_fingerprint": "EaZmpkYQa40=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.ovirt_network",
            "google_compute_subnetwork.ovirt_network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ovirt_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/double-skyline-310919/global/networks/ovirt-network",
            "mtu": 0,
            "name": "ovirt-network",
            "project": "double-skyline-310919",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ovirt_network_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-17T02:29:50.613-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/double-skyline-310919/regions/us-west1/subnetworks/ovirt-network-subnetwork-us-west1",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "ovirt-network-subnetwork-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/global/networks/ovirt-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "double-skyline-310919",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/double-skyline-310919/regions/us-west1/subnetworks/ovirt-network-subnetwork-us-west1"
          },
          "dependencies": [
            "google_compute_network.ovirt_network"
          ]
        }
      ]
    }
  ]
}